<resources>
    <string name="app_name">ImplicitIntents</string>
    <string name="edittext_uri">http://facebook.com</string>
    <string name="button_uri">Open Website</string>
    <string name="edittext_loc">Taman Kopo Indah</string>
    <string name="button_loc">Open Location</string>
    <string name="edittext_share">\'Twas brillig and the slithy toves</string>
    <string name="button_share">Share This Text</string>
</resources>