<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.user.implicitintents.MainActivity"
    android:orientation="vertical">

    <EditText
        android:id="@+id/website_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/edittext_uri"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="114dp" />

    <Button
        android:id="@+id/open_website_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:onClick="openWebsite"
        android:text="@string/button_uri"
        tools:layout_editor_absoluteX="28dp"
        tools:layout_editor_absoluteY="66dp" />

    <EditText
        android:id="@+id/location_edittext"
        android:layout_width="357dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/edittext_loc"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp" />

    <Button
        android:id="@+id/open_location_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="openLocation"
        android:text="@string/button_loc"
        tools:layout_editor_absoluteX="28dp"
        tools:layout_editor_absoluteY="164dp" />

    <EditText
        android:id="@+id/share_edittext"
        android:layout_width="358dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/edittext_share"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="212dp" />

    <Button
        android:id="@+id/share_text_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="shareText"
        android:text="@string/button_share"
        tools:layout_editor_absoluteX="28dp"
        tools:layout_editor_absoluteY="266dp" />

</LinearLayout>
